# AAD-OriginalWebApp-with-ML

./: .gitignore  README.md  main.py  nlp_wrapper.py  presentation-memo.md  pyproject.toml  requirements.txt
data/: staff.txt
lib/: config.py  imgps.py  nlp.py  preprocessor.py
lib/detaoperator/: __init__.py  detacon.py
templates/: footer.html.j2  head.html.j2  navbar.html.j2  root.html.j2  storage.html.j2
templates/lec/: l1.html.j2  l2.html.j2  l3.html.j2  l4.html.j2  layout.html.j2
